@@ -1,5 +1,8 @@
 [1.7.1]
 - Updated to libgdx 1.8.0
+- API Change and Addition: Pathfinding API
+  * Added method getIndex to the interface IndexedGraph.
+  * Removed classes DefaultIndexedGraph and IndexedNode.
 - API Change and Addition: Behavior Tree API
   * Added ability to guard any task.
   * Added branch task DynamicGuardSelector.
